--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <audio id="backgroundMusic" loop preload="auto"></audio>
     
     <!-- Scripts -->
-    <script src="three-bear.js"></script>
-    <script src="bear-ai.js"></script>
+    <script src="bear.js"></script>
+    <script src="bear.js"></script>
 </body>
 </html>
