--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
                 
                 <!-- Quick Phrases -->
                 <div class="quick-phrases">
+    <h3>Quick Phrases</h3>
+    <div class="phrase-buttons">
+        <button class="phrase-btn" data-text="Tell me something positive">
+            🌟 Positive Message
+        </button>
+        <button class="phrase-btn" data-text="Give me encouragement">
+            💪 Encouragement
+        </button>
+        <button class="phrase-btn" data-text="Tell me a joke">
+            😄 Tell a Joke
+        </button>
+        <button class="phrase-btn" data-text="How are you?">
+            ❓ How are you?
+        </button>
+    </div>
+</div>
+                <div class="quick-phrases">
                     <h3>Quick Phrases</h3>
                     <div class="phrase-buttons">
                         <button class="phrase-btn" data-text="Hello Buddy!">
